updated treemap and index

--- a/wiki-viz/index.html
+++ b/wiki-viz/index.html
@@ -6,7 +6,7 @@
 <ul>
   <li><a href="tagcloud.html">tagcloud.html</a></li>
   <li><a href="tagcloud2.html">tagcloud2.html</a></li>
-  <li><a href="tremap.html">tremap.html</a></li>
+  <li><a href="treemap.html">treemap.html</a></li>
 </ul>
 </body>
 </html>
