--- a/wiki-viz/index.html
+++ b/wiki-viz/index.html
@@ -7,6 +7,7 @@
   <li><a href="tagcloud.html">tagcloud.html</a></li>
   <li><a href="tagcloud2.html">tagcloud2.html</a></li>
   <li><a href="treemap.html">treemap.html</a></li>
+  <li><a href="circlelink.html">circlelink.html</a></li>
 </ul>
 </body>
 </html>
