more dataset on circle

--- a/wiki-viz/circlelink.html
+++ b/wiki-viz/circlelink.html
@@ -4,6 +4,11 @@
     <link href="style/hieredge.css" rel="stylesheet">
 </head>
 <body>
+    <input id="all" type="button" value="All" onclick="doCircle('all');" />
+    <input id="ict" type="button" value="ICT" onclick="doCircle('ict');" />
+    <input id="ssh" type="button" value="SSH" onclick="doCircle('ssh');" />
+    <br><br>
+    <div id="circle"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="scripts/hieredge.js"></script>
