added organizations noc

--- a/wiki-viz/noc_people_circlelink.html
+++ b/wiki-viz/noc_people_circlelink.html
@@ -9,6 +9,6 @@
     <div id="circle"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="scripts/noc/hieredge.js"></script>
+    <script src="scripts/noc/people_circlelink.js"></script>
 </body>
 
